fix: Fixing some spacing issues from previous refacto

--- a/css/index.css
+++ b/css/index.css
@@ -177,7 +177,7 @@ a:hover {
 	object-position : center 18%;
 }
 .card.card-full .card-title {
-	margin  : .8rem 0 .8rem 0;
+	margin  : 1rem 0 .8rem 0;
 	padding : 0 1rem;
 }
 
@@ -391,7 +391,7 @@ body > main {
 
 /* ACTIVITIES SECTION */
 #activites {
-	margin-bottom : 1rem;
+	margin-bottom : 1.5rem;
 }
 #cards-grid {
 	display   : flex;
